# Streaming_Data_Architecture

./: docker-compose.yml
bytewax-consumer/: Dockerfile  README.md  docker-compose.test.yml  pyproject.toml  run-tests.sh  wait-for-kafka.sh
bytewax-consumer/app/: main.py  pyspark_ocr.py
bytewax-consumer/tests/: __init__.py  test_main.py  test_pyspark_ocr.py
fastapi-backend/: Dockerfile  gunicorn.conf.py  main.py  pyproject.toml  start.sh
