[project]
name = "bytewax-consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "bytewax[kafka]>=0.21.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyspark==4.0.1",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "kafka-python>=2.3.0",
    "pytest>=9.0.2",
]

 