[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.12.0",
    "httpx>=0.28.0",
    "debugpy>=1.8.17",
    "fastapi>=0.119.0",
    "gunicorn>=23.0.0",
    "inotify>=0.2.12",
    "kafka-python>=2.3.0",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.21",
    "uvicorn>=0.37.0",
    "uvicorn-worker>=0.4.0",
    "elasticsearch>=9.3.0",
    "aiohttp>=3.13.3",
]
 
[dependency-groups]
dev = [
    "requests>=2.32.5",
]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]
